--- a/demoWebPage/ESP32-RMT-server.html
+++ b/demoWebPage/ESP32-RMT-server.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 	
+<!-- Web page to demonstrate how to use ESP32-RMT-server application software
+
+	This example code is in the Public Domain (or CC0 licensed, at your option.)
+	
+	Unless required by applicable law or agreed to in writing, this
+	software is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+	CONDITIONS OF ANY KIND, either express or implied.
+-->
+	
 <meta charset="utf-8"/>
 <title>ESP32-RMT-server</title>
 
